[IMP] add auth functionality
