# src/schemas/schemas.go
@@ -11,3 +11,8 @@ type TodoResponse struct {
 	TodoRequest
 	ID uint `json:"id"`
 }
+
+type AuthInputData struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
